
Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta13

Fixes:

- Images: Fixed memory leaks for image textures #122
- Other:  Fixed stop_dearpygui command #102

New Commands:

- Widgets: add "does_item_exist" command #119
- Widgets: add "get_item_children" command #123
- Widgets: add "get_all_items" command #123


-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 12
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta12

Fixes:

- Key/Mouse Callbacks: fixed issue where key/mouse callbacks were
	sending there ID as the sender (and as a string). They know
	send the active window as the sender and approriate information
	through data. #108

New Commands:

- Inputs:   input/slider/drag now have an "on_enter" keyword to only
	run their callbacks on enter key presses
- App:      new command "stop_dearpygui" #102
- Widgets:  new command "set_item_label" #99
- Widgets:  new command "get_item_label" #99

-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 11
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta11

New Features:

- Python 3.7 support


-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 10
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta10

Fixes:

- Render Callback: fixed issue with debug window freezing main callback #95
- Child Widget:    child widget now shows a horizontal scrollbar if contents are too large #91 kinda
- Multiline:       fixed issue where multiline did not work with other flags (i.e. readonly) #94
- Logger:          fixed issue with auto-scroll in logger (this is actually a Dear ImGui bug) #97